--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -63,7 +63,7 @@
           font-family: Arial, Helvetica, sans-serif;
           font-size: 14px;
           font-weight: bold;
-          margin: 60px 126px auto 132px;
+          margin: 28px auto auto auto;
           padding-top: 10px;
           padding-bottom: 10px;
           width: 320px;
