--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -113,9 +113,12 @@
             }
         }
     }
+
+    &__modal{
+
+    }
     
     &__modal-dialog{
-     position: relative;
      max-height: 578px;
      max-width: 578px;
      height: 578px;
@@ -126,13 +129,13 @@
         min-width: 578px;
         height: 578px;
         border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
 
     &__modal-header{
-      margin-top: 138px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       border-bottom: none;
     }
 
@@ -144,14 +147,13 @@
     }
 
     &__close{
-      position: absolute;
-      top: 0;
-      right: -50%;
-      transform: translateX(50%);
-      max-width: 14px;
-      max-height: 14px;
-      width: 14px;
-      height: 14px;
+      position: fixed;
+      top: 10%;
+      right:5%;
+      //transform: translateX(-50%);
+      //transform: translateY(-50%);
+      width: 41px;
+      height: 41px;
       border-radius: 50%;
       background-color: $colorWhite !important;
       display: flex;
@@ -169,13 +171,18 @@
      color: #aaaa;
     }
 
+    &__modal-body{
+      text-align: center;
+      flex: none;
+    }
+
     &__modal-body-paragraph{
       text-align: center;
       font-size: 24px;
       font-family: $roboto;
       font-weight: bold;
       width: 95%;
-      margin: auto;
+      margin: 42px auto 12px;
       padding: 0 24px;
     }
 
@@ -185,19 +192,25 @@
 
     &__modal-input-text{
       border: 3px solid #777777;
-      margin: 28px 126px auto 132px;
+      margin: 20px auto auto auto;
       opacity: 1;
       padding: 8px 6px;
       width: 320px;
     }
 
     &__modal-terms{
-      margin: 12px 126px 0 132px;
+      margin: 12px auto 0 auto;
+      width: 320px;
+      text-align: left;
+      display: flex;
+      align-items: center;
     }
 
     &__modal-label{
       font-size: 12px;
       opacity: 0.5;
+      margin-left: 4px;
+      margin-bottom: 0;
     }
 
   }
